# pong-game-cmake

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake  compile_commands.json  my_raylib_game
.cache/clangd/index/: cgltf.h.710CC802B4DED98B.idx  cocoa_init.m.B63C07EE0941720E.idx  cocoa_joystick.h.B0B1CC0BF96BD055.idx  cocoa_joystick.m.912C4D043A803FA7.idx  cocoa_monitor.m.B65B4EBA578CC4DE.idx  cocoa_platform.h.6CB75C3CC7BEA390.idx  cocoa_time.c.E068395D140E168E.idx  cocoa_time.h.48AED1C4563CCCDF.idx  cocoa_window.m.BE48FFF293BFE84A.idx  config.h.EC3B8E541002DF8A.idx  context.c.7D5ECF27B24376A3.idx  dr_mp3.h.7343098213CAC280.idx  dr_wav.h.913276D0D91D31F1.idx  egl_context.c.EFAEE26D05B82AE8.idx  glad.h.ED910E35FD6AEF54.idx  glfw3.h.2C6CCB9CCD1B3ED4.idx  glfw3native.h.F7FC71060044501C.idx  init.c.09149E371F8DFF57.idx  input.c.8F30EC6AF8663BC1.idx  internal.h.6E5AA1DC5898D444.idx  jar_mod.h.09B388AE9D316EF3.idx  jar_xm.h.CC257F4EB93FA8D5.idx  m3d.h.7E6E562C8B3006F8.idx  main.c.5A3CDB379024356D.idx  mappings.h.DEBBDBDC97B5536A.idx  miniaudio.h.4EC6B682C5BC9BC3.idx  monitor.c.CF5389485744FFAF.idx  msf_gif.h.0687126ADF7FC54F.idx  nsgl_context.m.CB473DD0A49727F7.idx  null_init.c.70DFC5DE947AE24A.idx  null_joystick.c.B3569A76F64F0956.idx  null_joystick.h.E2F3002D237A067D.idx  null_monitor.c.7A73AE9CC299F95E.idx  null_platform.h.4D6CFEB613A283FF.idx  null_window.c.6A80AF70E8CC6D94.idx  osmesa_context.c.0897E5AFDDB12FB1.idx  par_shapes.h.5F46F4B733099C92.idx  platform.c.E54AB508D7BEAF62.idx  platform.h.6B9421A65E55C390.idx  posix_module.c.BF9AD2E8BFF57023.idx  (+34 more)
sources/: main.c
